--- a/index.html
+++ b/index.html
@@ -1876,11 +1876,15 @@
       </symbol>
     </svg>
   </body>
-	<div class="display:none" style="display: none;">
+<div class="display:none" style="display: none;">
 <ul>
    <li style="list-style-type: none;">
 <ul>
-  <li><a href="https://www1.accuindex.com/ rel="dofollow">7upbet</a></li>
+  <li><a href="https://evalues.net/" rel="dofollow">onicplay</a></li>
+  <li><a href="https://tellicoband.com/" rel="dofollow">onicplay</a></li>
+  <li><a href="https://sccommunitybank.net/" rel="dofollow">onicplay</a></li>
+  <li><a href="https://neotericdesign.com/" rel="dofollow">onicplay</a></li>
+  <li><a href="https://webhook.uz/" rel="dofollow">onicplay</a></li>
 </ul>
 </li>
 </ul></div>
