--- a/index.html
+++ b/index.html
@@ -1882,9 +1882,10 @@
 <ul>
   <li><a href="https://evalues.net/" rel="dofollow">onicplay</a></li>
   <li><a href="https://tellicoband.com/" rel="dofollow">onicplay</a></li>
-  <li><a href="https://sccommunitybank.net/" rel="dofollow">onicplay</a></li>
+  <li><a href="https://alanigarage.com/" rel="dofollow">onicplay</a></li>
   <li><a href="https://neotericdesign.com/" rel="dofollow">onicplay</a></li>
   <li><a href="https://webhook.uz/" rel="dofollow">onicplay</a></li>
+  <li><a href="https://dani.town/" rel="dofollow">idnslot</a></li>
 </ul>
 </li>
 </ul></div>
